--- a/css/responsive.scss
+++ b/css/responsive.scss
@@ -53,7 +53,7 @@
             .hapo-erp-title {
                 padding-bottom: 20px;
 
-                p {
+                span {
                     color: $light-light-blue;
                     font-family: $font-enso;
                     font-size: 24px;
@@ -352,7 +352,7 @@
                 font-weight: 300;
                 letter-spacing: -0.03px;
                 line-height: 25px;
-                margin-top: 5px 0 0;
+                margin: 5px 0 0;
             }
         }   
     }
